Ensure new text editor menu maintains its sticky position on iOS devices even when the text editor is focused.

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -77,7 +77,7 @@ textarea {
   z-index: 10;
   background-color: var(--primary-bg);
   border-bottom: none;
-  transition: border-bottom 0.3s ease;
+  transition: top 0.3s ease;
   padding: 8px;
   margin-bottom: 0px;
   display: flex;
